Add the link mate.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<section id="dw_tut_credits">
 		
 			<hr>
-			<p>This is a demo page for a DesignWoop tutorial. Read the full tutorial: <a href="#" title="">Tutorial: Create A Countdown & Signup Coming Soon Page.</a></p>
+			<p>This is a demo page for a DesignWoop tutorial. Read the full tutorial:<br><a href="http://designwoop.com/?p=13227" title="Tutorial: Create A Countdown & Signup Coming Soon Page">Tutorial: Create A Countdown & Signup Coming Soon Page.</a></p>
 		
 		</section>
 		
