--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	
-	<title>Demo: Create A Countdown & Signup Coming Soon Page</title>
+	<title>Enchanting Owl</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 	
